fixed button text alignment (mobile view)

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -134,6 +134,8 @@
           line-height: 2.75rem;
           padding: 0 1.25rem 0 (1.25rem + _font(letter-spacing));
           text-transform: uppercase;
+          text-align: center;
+          margin: auto;
           letter-spacing: _font(letter-spacing);
           font-size: 0.8rem;
           font-family: _font(family);
